minor bug squashing

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,15 @@ html {
     height: 100%;
 }
 
+@font-face {
+    font-family: PS2P;
+    src: url(./fonts/PressStart2P-Regular.ttf);
+}
+@font-face {
+    font-family: Rationale;
+    src: url(./fonts/Rationale-Regular.ttf);
+}
+
 body {
     width: 100%;
     height: 100%;
@@ -22,7 +31,7 @@ body {
 }
 
 .title {
-    font-family: Press Start 2P; /*download it*/
+    font-family: PS2P; /*download it*/
     font-style: normal;
     font-weight: normal;
     font-size: 32px;
@@ -149,7 +158,7 @@ body {
     
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 5%;
 
@@ -163,6 +172,12 @@ body {
     flex: none;
     order: 0;
     flex-grow: 0;
+
+    font-family: PS2P;
+}
+
+.score-number {
+    font-size: 48px;
 }
 
 /*Game screen - left side*/
